# fex

./: .gitignore  CHANGELIST  INSTALL  LICENSE  Makefile  README  VERSION  fex.c  fex.h  fex.pod  fex.spec.in  need_snprintf.sh  version.sh
snprintf_2.2/with_autoconf/: INSTALL  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  snprintf.c  snprintf.h  working.in
t/: test.sh  test.subr
t/args/: greedy  multifields  multisplit  nongreedy  numrange  othersplit  specialchars
t/input/: basic  multifields  multisplit  nongreedy  numrange  specialchars
t/output/: basic  greedy  multifields  multisplit  numrange  othersplit  specialchars
