dnl Process this file with autoconf to produce a configure script.
AC_INIT(snprintf.c)

AM_INIT_AUTOMAKE(libsnprintf,1.4.0)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC

dnl Tests for Windows
AC_CYGWIN
AC_EXEEXT
AC_OBJEXT
dnl End Tests for Windows

dnl libraries
AM_PROG_LIBTOOL

dnl install program
AC_PROG_INSTALL

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Check for LONG LONG
AC_caolan_C_LONG_LONG

AC_OUTPUT(Makefile)
